--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,8 +6,10 @@ package:
   version: {{ version }}
 
 build:
-  number: 0
+  number: 1
   script: python -m pip install --no-deps fmpy=={{ version }}
+  entry_points:
+    - fmpy = fmpy.command_line:main
 
 requirements:
   build:
