Build from actual source

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -4,6 +4,10 @@
 package:
   name: {{ name|lower }}
   version: {{ version }}
+  
+source:
+  url: https://github.com/CATIA-Systems/FMPy/archive/v{{ version }}.tar.gz
+  sha256: 0984c73e119078f6feadf544dad6908f18d023779dcd2000b69539e14f35d9fc
 
 build:
   number: 1000
