--- a/.ci_support/linux_python2.7.yaml
+++ b/.ci_support/linux_python2.7.yaml
@@ -6,14 +6,15 @@ channel_targets:
 - conda-forge main
 docker_image:
 - condaforge/linux-anvil-comp7
+numpy:
+- '1.9'
 pin_run_as_build:
+  pyqt:
+    max_pin: x.x
   python:
     min_pin: x.x
     max_pin: x.x
+pyqt:
+- '5.6'
 python:
 - '2.7'
-zip_keys:
-- - channel_sources
-  - channel_targets
-  - docker_image
-  - build_number_decrement
