--- a/.ci_support/osx_python2.7.yaml
+++ b/.ci_support/osx_python2.7.yaml
@@ -12,13 +12,15 @@ macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
 - '10.9'
+numpy:
+- '1.9'
 pin_run_as_build:
+  pyqt:
+    max_pin: x.x
   python:
     min_pin: x.x
     max_pin: x.x
+pyqt:
+- '5.6'
 python:
 - '2.7'
-zip_keys:
-- - channel_sources
-  - channel_targets
-  - build_number_decrement
