--- a/.ci_support/win_python3.6vc14.yaml
+++ b/.ci_support/win_python3.6vc14.yaml
@@ -8,5 +8,12 @@ pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
+  vc:
+    max_pin: x
 python:
-- '3.8'
+- '3.6'
+vc:
+- '14'
+zip_keys:
+- - python
+  - vc
