Add CXX compiler to build requirements

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,8 +17,9 @@ build:
 
 requirements:
   build:
-    - {{ compiler('c') }}
     - cmake
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
     - python
     - pip
     - lxml
