--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "0.2.16" %}
+{% set version = "0.2.17" %}
 
 package:
   name: fmpy
@@ -6,7 +6,8 @@ package:
 
 source:
   url: https://github.com/CATIA-Systems/FMPy/archive/v{{ version }}.tar.gz
-  sha256: 5f6155f15a95d6bdd4a96d97c7f8af836d128a8d4d5b95b052daf019dcd7557c
+  sha256: a1460271190cfe9b32779b2cc78591ad09ca15475c8a13761cb10d33840d48c1
+  # macOS: shasum -a 256 <file>
 
 build:
   number: 0
