--- a/.ci_support/win_64_python3.7.____cpython.yaml
+++ b/.ci_support/win_64_python3.7.____cpython.yaml
@@ -3,12 +3,14 @@ channel_sources:
 channel_targets:
 - conda-forge main
 numpy:
-- '1.14'
+- '1.16'
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
 - 3.7.* *_cpython
+target_platform:
+- win-64
 vc:
 - '14'
