--- a/.ci_support/linux_64_python3.8.____cpython.yaml
+++ b/.ci_support/linux_64_python3.8.____cpython.yaml
@@ -2,18 +2,13 @@ channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
-numpy:
-- '1.16'
+docker_image:
+- condaforge/linux-anvil-comp7
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.7.* *_cpython
+- 3.8.* *_cpython
 target_platform:
-- win-64
-vc:
-- '14'
-zip_keys:
-- - python
-  - numpy
+- linux-64
