--- a/.ci_support/win_64_python3.6.____cpython.yaml
+++ b/.ci_support/win_64_python3.6.____cpython.yaml
@@ -1,13 +1,7 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
-macos_machine:
-- x86_64-apple-darwin13.4.0
-numpy:
-- '1.16'
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -15,7 +9,6 @@ pin_run_as_build:
 python:
 - 3.6.* *_cpython
 target_platform:
-- osx-64
-zip_keys:
-- - python
-  - numpy
+- win-64
+vc:
+- '14'
