--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,7 +29,7 @@ outputs:
         - python
         - lark-parser
         - lxml
-        - msgpack
+        - msgpack-python
         - numpy
         - pathlib
         - pywin32  # [win]
