--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,17 +1,15 @@
-{% set version = "0.3.3" %}
-
 package:
   name: fmpy
-  version: {{ version }}
+  version: 0.3.4
 
 source:
-  url: https://files.pythonhosted.org/packages/af/6b/ad95c9494279384f77a308a9f579f025c8c3fe9c1e12280bcaac43757b30/FMPy-0.3.3-py3-none-any.whl
-  sha256: c7160b077bb1fee918de736d2fe3da923327758c2cff8d133ad6238159de59b2
+  url: https://files.pythonhosted.org/packages/9a/1f/c71b51adc38a4f961705fa4c2c2fc3cc1b81a46a662370310fedb2f60846/FMPy-0.3.4-py3-none-any.whl
+  sha256: 17a335bd0321297ff405e42242ad3a6a41080f6ce28e51e619ade2a53eb1bd17
   # macOS: shasum -a 256 <file>
   # Windows: certutil -hashfile <file> SHA256
 
 build:
-  number: 1
+  number: 0
   skip: true  # [win and vc<14]
   entry_points:
     - fmpy = fmpy.command_line:main
