[ci skip] [skip ci] [cf admin skip] ***NO_CI*** admin migration CondaForgeMasterToMain

--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -2,3 +2,6 @@ provider:
   win: azure
 conda_forge_output_validation: true
 build_with_mambabuild: false
+github:
+  branch_name: main
+  tooling_branch_name: main
