--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,10 +1,10 @@
 package:
   name: fmpy
-  version: 0.3.10
+  version: 0.3.11
 
 source:
-  url: https://files.pythonhosted.org/packages/4b/85/a8ff2d4f60e90572cbdb6a23e29fe9a07b56d4a7159fca8f7c632101ff07/FMPy-0.3.10-py3-none-any.whl
-  sha256: 5a51b87dd41309486a7093551d68bd1da71fadb87e59d88cfbb67681770dcd02
+  url: https://files.pythonhosted.org/packages/39/0d/ece7dac0ebcd7a5094e81b93c7075f108941889609c3607c1cea2b6a4a0f/FMPy-0.3.11-py3-none-any.whl
+  sha256: 64935a7f2f13240a71c125bf09efe49156cf5cf88cd24fc2f19f8f748af02941
   # macOS: shasum -a 256 <file>
   # Windows: certutil -hashfile <file> SHA256
 
@@ -26,6 +26,7 @@ outputs:
       run:
         - python
         - attrs
+        - jinja2
         - lark-parser
         - lxml
         - msgpack-python
@@ -40,6 +41,7 @@ outputs:
         - fmpy.cross_check
         - fmpy.examples
         - fmpy.fmucontainer
+        - fmpy.modelica
         - fmpy.ssp
         - fmpy.sundials
 
