Skip fmpy.sundials import test on Linux
due to incompatible glibc version

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -43,7 +43,7 @@ outputs:
         - fmpy.fmucontainer
         - fmpy.modelica
         - fmpy.ssp
-        - fmpy.sundials
+        - fmpy.sundials  # [not linux]
 
   - name: fmpy
     build:
