--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,6 +13,7 @@ build:
   skip: true  # [win and vc<14]
   entry_points:
     - fmpy = fmpy.command_line:main
+  binary_relocation: False
 
 outputs:
 
